Update Tutorial Lesson 5.html

--- a/lesson_activity/Tutorial Lesson 5.html
+++ b/lesson_activity/Tutorial Lesson 5.html
@@ -39,12 +39,12 @@
 
         <ol type = A>
             <LI>DCS1003</LI>
-            <ul type = cicrle>
+            <ul type = circle>
                 <LI>15/9 - Typing Test</LI>
                 <LI>18/9 - Quiz</LI>
             </ul>
             <LI>DCS3003</LI>
-            <ul type = cicrle>
+            <ul type = circle>
                 <LI>5/11 - Assignment Due</LI>
                 <LI>12/11 - Project Due</LI>
             </ul>
