--- a/lesson_activity/Quiz 1.html
+++ b/lesson_activity/Quiz 1.html
@@ -23,11 +23,11 @@
 <hr size=2 width=900 align=left noshade color=black>
 
 <ol type="1"><font face = arial size="3" color="green">Title</font>
-    <li> s </li>
-    <li> o </li>
-    <li> r </li>
-    <li> r </li>
-    <li> y </li>
-    <li> 8 </li>
-    <li> d </li>
+    <li>Preheat the oven to 190oC</li>
+    <li>Grease a 20cm round cake pan.</li>
+    <li>In a medium bowl, whip together the eggs and castor sugar until fluffy.</li>
+    <li>Fold in flour.</li>
+    <li>Pour mixture into the prepared pan.</li>
+    <li>Bake 20 minutes in the preheated oven until the top cake springs back when lightly presses.</li>
+    <li>Cool in the pan over a wire rack.</li>
 </ol>
