Update Tutorial Lesson 6.html

--- a/lesson_activity/Tutorial Lesson 6.html
+++ b/lesson_activity/Tutorial Lesson 6.html
@@ -16,8 +16,8 @@
 
 <p>
     <font face="chiller" size="3" clor="grey">
-        My favourite game is <b><u>Moblie Legends</u></b>. It is because the game has only one goal: real and destory the enemy's base to win. This is a <b><u>5 VS 5</u></b> match, and victory
-        is imposibble without teamwork. Teamwork strategy, the right hero selection and perfect timing are the keys to winning the game. As I said before, catching 
+        My favourite game is <b><u>Moblie Legends</u></b>. It is because the game has only one goal: real and destory the enemy's base to win. This is a <b><u>5 VS 5</u></b> 
+        match, and victoryis imposibble without teamwork. Teamwork strategy, the right hero selection and perfect timing are the keys to winning the game. As I said before, catching 
         up on a losing game is only possible with the help of solid teamwork.
     </font>
 </p>
@@ -32,7 +32,7 @@
     </font>
 </p>
 
-<hr size=2 width=1000 align=left noshade color=black>
+<hr size=2 width=1300 align=left noshade color=black>
 
 <font face="Berlin Sans FB" size="5" color="bronze"><b>Example Hero:</b></font>
 
@@ -65,11 +65,11 @@
     
 </ol>
 
-<hr size=2 width=10000 align=left noshade color=black>
+<hr size=2 width=1300 align=left noshade color=black>
 
 <img src="hero.jpg"  height=750 width=500 border=5 align=middle alt=yyj>
 
-<hr size=2 width=1000 align=left noshade color=black>
+<hr size=2 width=1300 align=left noshade color=black>
 
 <font face="Algerian" size="5" color="navy"><b>The End</b></font>
 
