Update Tutorial Lesson 6.html

--- a/lesson_activity/Tutorial Lesson 6.html
+++ b/lesson_activity/Tutorial Lesson 6.html
@@ -10,6 +10,9 @@
 <hr size="4" width="500" align="left" noshade color="black">
 
 <img src="ML.jpg"  height=300 width=500 border=5 align=middle alt=yyj>
+    <abbr title="Full Name-Mobile Legends">
+Mobile Legends
+</abbr>
 
 <hr size="4" width="500" align="left" noshade color="black">
 
