Update Tutorial Lesson 7.html

--- a/lesson_activity/Tutorial Lesson 7.html
+++ b/lesson_activity/Tutorial Lesson 7.html
@@ -4,51 +4,55 @@
 <link rel=icon href=mtx.jpg type=image/jpg>
 <meta name=viewport content=width=device-width,initial-scale=1.0>
 </head>
-<body topmargin=20 leftmargin=50 background="beach.jpg">
+<body topmargin=20 leftmargin=50>
 
-<table border="3" width="800"and height="35%"  align=center bordercolor="blue">
+<table border="3" width="800"and height="35%"  align=center bordercolor="blue" background=beach.jpg> 
     <caption>CRESCENDO INTERNETIONAL COLLEGE<br>
     TIMETABLE FOR SEMESTER <font face="Arial Black" size="3" color="yellow">SEPTEMBER 2023</font><br>
     DIPLOMA IN COMPUTER SCIENCE</caption>
-    <tr width="60%" and height="90%" align="center">
+    <font face="forte" size="3"><tr width="60%" and height="90%" align="center">
         <th>Day/Time</th>
         <th>9:00-11:00AM</th>
         <th>11:15-1:15PM</th>
         <th>2:15-4:15PM</th>
+      </font> 
      </tr>
 
-     <tr width="60%" and height="90%" align=center bgcolor="khaki">
+     <tr width="60%" and height="90%" align=center>
         <td>Monday</td>
         <td>MPU2113</td>
         <td>DCS1102-LGE</td>
         <td>DCS1003</td>
      </tr>
 
-     <tr width="750"and height="25%"  align=center bgcolor="khaki">
+     <tr width="750"and height="25%"  align=center>
         <td>Tuesday</td>
         <td>DCS1103</td>
         <td bgcolor="sky blue"></td>
         <td bgcolor="sky blue"></td>
      </tr>
 
-     <tr width="750"and height="25%"  align=center bgcolor="khaki">
+     <tr width="750"and height="25%"  align=center>
         <td>Wednesday</td>
         <td>DCS3003</td>
         <td bgcolor="sky blue"></td>
         <td>DCS2003-MST</td>
      </tr>
 
-     <tr width="750"and height="25%"  align=center bgcolor="khaki">
+     <tr width="750"and height="25%"  align=center>
         <td>Thursday</td>
         <td>DCS1103</td>
         <td bgcolor="sky blue"></td>
         <td>DCS2003-MST</td>
      </tr>
 
-     <tr width="50%" and height="55%" align="center" bgcolor="khaki">
+     <tr width="50%" and height="55%" align="center">
         <td>Friday</td>
         <td>DCS1003</td>
         <td>DCS3003</td>
         <td bgcolor="sky blue"></td>
-     </tr>
+     </tr> 
+     
 </table>
+</body>
+</html>
