Update Tutorial Lesson 9.html

--- a/lesson_activity/Tutorial Lesson 9.html
+++ b/lesson_activity/Tutorial Lesson 9.html
@@ -79,7 +79,7 @@
 <a href="mailto:yapyijin1020@gmail.com">Contact Us</a>
 <br><br>
 
-<a href="file:///C:/semester%201_September%202023/DCS3003/html/activity%207d.html">activity 7d</a>
+<a href="https://yyj2005.github.io/lesson_activity/Tutorial%20Lesson%207.html">activity 7d</a>
 
 </body>
 </html>
