Update Tutorial Lesson 4.html

--- a/lesson_activity/Tutorial Lesson 4.html
+++ b/lesson_activity/Tutorial Lesson 4.html
@@ -49,6 +49,7 @@ topmargin="90px">
         advanced level</font></b>
     </font>
 </p>
+    <font face="Algerian" size="5" color="navy"><a href=#point_here><b>Back To main</b></a></font>
 
 </body>
 </html>
