--- a/lesson_activity/Tutorial Lesson 6.html
+++ b/lesson_activity/Tutorial Lesson 6.html
@@ -76,5 +76,7 @@ Mobile Legends
 
 <font face="Algerian" size="5" color="navy"><b>The End</b></font>
 
+    <font face="Algerian" size="5" color="navy"><a href=#point_here><b>Back To main</b></a></font>
+
 
 
