Update Tutorial Lesson 7.html

--- a/lesson_activity/Tutorial Lesson 7.html
+++ b/lesson_activity/Tutorial Lesson 7.html
@@ -52,6 +52,8 @@
         <td>DCS3003</td>
         <td bgcolor="sky blue"></td>
      </tr> 
+
+    <font face="Algerian" size="5" color="navy"><a href=#point_here><b>Back To main</b></a></font>
      
 </table>
 </body>
