Update Tutorial Lesson 8.html

--- a/lesson_activity/Tutorial Lesson 8.html
+++ b/lesson_activity/Tutorial Lesson 8.html
@@ -243,4 +243,5 @@
     <td></td>
 </tr>
 </table>
+<font face="Algerian" size="5" color="navy"><a href=#point_here><b>Back To main</b></a></font>
 </body></html>
