--- a/lesson_activity/Tutorial Lesson 5.html
+++ b/lesson_activity/Tutorial Lesson 5.html
@@ -53,4 +53,4 @@
 
 <hr size=2 width=800 align=left noshade color=blue>
 
-<font face="Algerian" size="5" color="navy"><a href=#point_here><b>Back To main</b></a></font>
+<font face="Algerian" size="5" color="navy"><a href=https://yyj2005.github.io/lesson_activity/Tutorial%20Lesson%2010.html><b>Back To main</b></a></font>
