Update Tutorial Lesson 7.html

--- a/lesson_activity/Tutorial Lesson 7.html
+++ b/lesson_activity/Tutorial Lesson 7.html
@@ -53,7 +53,7 @@
         <td bgcolor="sky blue"></td>
      </tr> 
 
-    <font face="Algerian" size="5" color="navy"><a href=#point_here><b>Back To main</b></a></font>
+    <font face="Algerian" size="5" color="navy"><a href=https://yyj2005.github.io/lesson_activity/Tutorial%20Lesson%2010.html><b>Back To main</b></a></font>
      
 </table>
 </body>
