Update Tutorial Lesson 8.html

--- a/lesson_activity/Tutorial Lesson 8.html
+++ b/lesson_activity/Tutorial Lesson 8.html
@@ -243,5 +243,5 @@
     <td></td>
 </tr>
 </table>
-<font face="Algerian" size="5" color="navy"><a href=#point_here><b>Back To main</b></a></font>
+<font face="Algerian" size="5" color="navy"><a href=https://yyj2005.github.io/lesson_activity/Tutorial%20Lesson%2010.html><b>Back To main</b></a></font>
 </body></html>
