--- a/lesson_activity/Project.html
+++ b/lesson_activity/Project.html
@@ -13,7 +13,7 @@
         <br>
         <nav>
             <ul>
-                <li><a href="file:///C:/semester%201_September%202023/DCS3003/html/example%20for%20ass.html">Home</a></li>
+                <li><a href="https://yyj2005.github.io/lesson_activity/Project.html">Home</a></li>
                 <li><a href=https://yyj2005.github.io/lesson_activity/inside%20project.html" target="_self">Products</a></li>
                 <li><a href="mailto:yapyijin1020@gmail.com">Contact Us</a></li>
             </ul>
