--- a/lesson_activity/inside project.html
+++ b/lesson_activity/inside project.html
@@ -151,7 +151,7 @@
         </form>
     </div>
 
-    <p align="center" size="7"><a href="file:///C:/semester%201_September%202023/DCS3003/html/example%20for%20ass.html" >Back to Home</a></p>
+    <p align="center" size="7"><a href="https://yyj2005.github.io/lesson_activity/Project.html" >Back to Home</a></p>
     
 </body>
 </html>
