--- a/lesson_activity/Project.html
+++ b/lesson_activity/Project.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <li><a href="https://yyj2005.github.io/lesson_activity/Project.html">Home</a></li>
-                <li><a href=https://yyj2005.github.io/lesson_activity/inside%20project.html" target="_self">Products</a></li>
+                <li><a href="https://yyj2005.github.io/lesson_activity/inside%20project.html" target="_self">Products</a></li>
                 <li><a href="mailto:yapyijin1020@gmail.com">Contact Us</a></li>
             </ul>
         </nav>
