--- a/lesson_activity/Project.html
+++ b/lesson_activity/Project.html
@@ -13,10 +13,10 @@
         <br>
         <nav>
             <ul>
-                <li><a href=file:///C:/semester%201_September%202023/DCS3003/html/Project.html>Home</a></li>
-                <li><a href="C:\semester 1_September 2023\DCS3003\html\Product ecommerce.html" target="_self">Products</a></li>
+                <li><a href=https://yyj2005.github.io/lesson_activity/Project.html>Home</a></li>
+                <li><a href=https://yyj2005.github.io/lesson_activity/Product%20ecommerce.html target="_self">Products</a></li>
                 <li><a href="mailto:yapyijin1020@gmail.com">Contact Us</a></li>
-                <li><a href="C:\semester 1_September 2023\DCS3003\html\Cus Details.html">Cus details</a></li>
+                <li><a href=https://yyj2005.github.io/lesson_activity/Cus%20Details.html>Cus details</a></li>
             </ul>
         </nav>
     </header>
@@ -47,6 +47,6 @@
     <footer>
         <p>&copy; 2023 My E-commerce Store Bee Shoes</p> 
     </footer>
-    <p align="center" size="7"><a href="C:\semester 1_September 2023\DCS3003\html\Project.html" >Back to Home</a></p>
+    <p align="center" size="7"><a href=https://yyj2005.github.io/lesson_activity/Project.html >Back to Home</a></p>
 </body>
 </html>
