--- a/lesson_activity/Product ecommerce.html
+++ b/lesson_activity/Product ecommerce.html
@@ -13,8 +13,9 @@
         <br>
         <nav>
             <ul>
-                <li><a href="file:///C:/semester%201_September%202023/DCS3003/html/Women.html">Women</a></li>
-                <li><a href="C:\semester 1_September 2023\DCS3003\html\Men.html">Men</a></li>
+                <li><a href=https://yyj2005.github.io/lesson_activity/Project.html>Home</a></li>
+                <li><a href=https://yyj2005.github.io/lesson_activity/Women.html>Women</a></li>
+                <li><a href=https://yyj2005.github.io/lesson_activity/Men.html>Men</a></li>
             </ul>
         </nav>
     </header>
@@ -93,8 +94,6 @@
             <p class="price">RM 1912</p>
             <button>Add to Cart</button>
         </div>
-       
-        <!-- Add more products here -->
     </main>
 </head>
 <br>
