--- a/lesson_activity/Women.html
+++ b/lesson_activity/Women.html
@@ -35,6 +35,6 @@
         </div>
     </main>
 </head>
-<p align="center" size="7"><a href="C:\semester 1_September 2023\DCS3003\html\Project.html" >Back to Home</a></p>
+<p align="center" size="7"><a href=https://yyj2005.github.io/lesson_activity/Project.html >Back to Home</a></p>
 </body>
 </html>
