--- a/lesson_activity/Tutorial Lesson 17.html
+++ b/lesson_activity/Tutorial Lesson 17.html
@@ -1,23 +1,85 @@
-<!DOCTYPE html>
 <html>
 <head>
-    <title>Styled Form</title>
-    <link rel=icon href=ok.jpg type=image/jpg>
-    <link rel="stylesheet" type="text/css" href="tutorial 17 css.css">
+<title>Tutorial 17</title>
+<link rel=icon href=ok.jpg type=image/jpg>
+<link rel=stylesheet href="tutorial 17 css.css">
+<meta name=viewport content=width=device-width,initial-scale=1.0>
+
 </head>
-<body>
-    <h2>Contact Us</h2>
-    <form>
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" placeholder="Your name" required>
+<body topmargin=50>
+<center>
+<form>
+<p style="background-color:rgb(94, 101, 102);
+font-family:verdena;
+font-size:160%;text-align:center;
+width:60%;height:100%;">
+<br>
+<table>
+<caption>Personal details:</caption>
+<tr>
+<td>First name:</td>
+<td><input type=text name=fname></td>
+</tr>
 
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" placeholder="Your email" required>
+<tr>
+<td>Last name:</td>
+<td><input type=text name=Iname></td>
+</tr>
 
-        <label for="feedback">Feedback:</label>
-        <textarea id="feedback" name="feedback" placeholder="Your feedback" required></textarea>
+<tr>
+<td>Gender:</td>
+<td><input type=radio name=gender value=Male>Male
+<input type=radio name=gender value=Female>Female</td>
+</tr>
 
-        <input type="submit" value="Submit">
-    </form>
-</body>
-</html>
+<tr>
+<td>Choose your favorite subjects:<br></td>
+<td><input type = checkbox name=fav_sub value=DCS4103>DCS4103
+<input type = checkbox name=fav_sub value=DCS3003>DCS3003<input type = checkbox name=fav_sub value=MST1003>MST1003
+<input type = checkbox name=fav_sub value=MSt2003>MST2003
+</td>
+</tr>
+
+<tr>
+<td>Address:</td>
+<td><textarea rows=4 cols=30 name=address></textarea></td>
+</tr>
+
+<tr>
+<td>Date of birth:</td>
+<td><input type=date name=dob></td>
+</tr>
+
+<tr>
+<td>Login Password:</td>
+<td><input type=password name=loginpass></td>
+</tr>
+
+<tr>
+<td>Course:</td>
+<td><select>
+<option value="0">-list of Courses -</option>
+
+<optgroup label="Diploma In Computer Science">
+<option value="DCS_S1">Semester 1</option>
+<option value="DCS_S2">Semester 2</option>
+<option value="DCS_S3">Semester 3</option>
+<option value="DCS_S4">Semester 4</option>
+<option value="DCS_S5">Semester 5</option>
+<option value="DCS_S6">Semester 6</option>
+</optgroup>
+
+<option value="DIB">Diploma in Bussiness</option>
+<option value="DAS">Diploma in Airline Services</option>
+</select></td>
+</tr>
+
+<tr>
+<th></th>
+<th align=left><br>
+<input type=submit value=Submit>
+<input type=reset value=Reset></th>
+</tr>
+</table>
+</form>
+</center></body></html>
