--- a/lesson_activity/Project.html
+++ b/lesson_activity/Project.html
@@ -46,6 +46,7 @@
    
     <footer>
         <p>&copy; 2023 My E-commerce Store Bee Shoes</p> 
+        <p><button onclick="window.print()">Print this page</button></p>
     </footer>
     <p align="center" size="7"><a href=https://yyj2005.github.io/lesson_activity/Project.html >Back to Home</a></p>
 </body>
