--- a/lesson_activity/Men.html
+++ b/lesson_activity/Men.html
@@ -15,23 +15,47 @@
         <div class="product">
             <img src="product 11.jpg" alt="Product 11"> 
             <p class="price">RM 499</p>
-            <button>Add to Cart</button>
+            <script>
+                function showmessage(){
+            alert("Succsseful Add to Cart");
+            }
+            </script>
+
+            <button onclick="showmessage()">Add to Cart</button>
         </div>
 
         <div class="product">
             <img src="product 12.jpg" alt="Product 12"> 
             <p class="price">RM 269</p>
-            <button>Add to Cart</button>
+            <script>
+                function showmessage(){
+            alert("Succsseful Add to Cart");
+            }
+            </script>
+
+            <button onclick="showmessage()">Add to Cart</button>
         </div>
         <div class="product">
             <img src="product 13.jpg" alt="Product 13"> 
             <p class="price">RM 559</p>
-            <button>Add to Cart</button>
+            <script>
+                function showmessage(){
+            alert("Succsseful Add to Cart");
+            }
+            </script>
+
+            <button onclick="showmessage()">Add to Cart</button>
         </div>
         <div class="product">
             <img src="product 14.jpg" alt="Product 14"> 
             <p class="price">RM 359</p>
-            <button>Add to Cart</button>
+            <script>
+                function showmessage(){
+            alert("Succsseful Add to Cart");
+            }
+            </script>
+
+            <button onclick="showmessage()">Add to Cart</button>
         </div>
     </main>
 </head>
