--- a/lesson_activity/Cus Details.html
+++ b/lesson_activity/Cus Details.html
@@ -1,39 +1,84 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bee Shoes</title>
-    <link rel=icon href="logo ecomerce.jpg" type=image/jpg>
-    <link rel="stylesheet" href="cus details.css">
-<body topmargin="50" bgcolor="grey">
-    <center>
-        <body>
-            <div class="container">
-                <h2>Customer details</h2>
-                <form action="submit.php" method="post">
-                    <div class="form-group">
-                        <label for="name">Name:</label>
-                        <input type="text" id="name" name="name" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email:</label>
-                        <input type="email" id="email" name="email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="phone">Phone number:</label>
-                        <input type="tel" id="phone" name="phone" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="message">Remark:</label>
-                        <textarea id="message" name="message"></textarea>
-                    </div>
-                    <div class="form-group">
-                        <input type="submit" value="Submit">
-                    </div>
-                </form>
-            </div>        
-</center>
-<p align="center" size="7"><a href="C:\semester 1_September 2023\DCS3003\html\Project.html" >Back to Home</a></p>
-</body>
-</html>
+<title>Bee Shoes</title>
+<link rel=icon href=ok.jpg type=image/jpg>
+<meta name=viewport content=width=device-width,initial-scale=1.0>
+
+</head>
+<body topmargin=50 bgcolor="grey">
+<center>
+<form>
+<p style="background-color:rgb(40, 239, 235);
+font-family:verdena;
+font-size:160%;text-align:center;
+width:60%;height:100%;">
+<br>
+<table>
+<caption>Personal details:</caption>
+<tr>
+<td>First name:</td>
+<td><input type=text name=fname></td>
+</tr>
+
+<tr>
+<td>Last name:</td>
+<td><input type=text name=Iname></td>
+</tr>
+
+<tr>
+<td>Gender:</td>
+<td><input type=radio name=gender value=Male>Male
+<input type=radio name=gender value=Female>Female</td>
+</tr>
+
+<tr>
+<td>Choose your favorite subjects:<br></td>
+<td><input type = checkbox name=fav_sub value=DCS4103>DCS4103
+<input type = checkbox name=fav_sub value=DCS3003>DCS3003<input type = checkbox name=fav_sub value=MST1003>MST1003
+<input type = checkbox name=fav_sub value=MSt2003>MST2003
+</td>
+</tr>
+
+<tr>
+<td>Address:</td>
+<td><textarea rows=4 cols=30 name=address></textarea></td>
+</tr>
+
+<tr>
+<td>Date of birth:</td>
+<td><input type=date name=dob></td>
+</tr>
+
+<tr>
+<td>Login Password:</td>
+<td><input type=password name=loginpass></td>
+</tr>
+
+<tr>
+<td>Course:</td>
+<td><select>
+<option value="0">-list of Courses -</option>
+
+<optgroup label="Diploma In Computer Science">
+<option value="DCS_S1">Semester 1</option>
+<option value="DCS_S2">Semester 2</option>
+<option value="DCS_S3">Semester 3</option>
+<option value="DCS_S4">Semester 4</option>
+<option value="DCS_S5">Semester 5</option>
+<option value="DCS_S6">Semester 6</option>
+</optgroup>
+
+<option value="DIB">Diploma in Bussiness</option>
+<option value="DAS">Diploma in Airline Services</option>
+</select></td>
+</tr>
+
+<tr>
+<th></th>
+<th align=left><br>
+<input type=submit value=Submit>
+<input type=reset value=Reset></th>
+</tr>
+</table>
+</form>
+</center></body></html>
