--- a/lesson_activity/Cus Details.html
+++ b/lesson_activity/Cus Details.html
@@ -32,10 +32,9 @@ width:60%;height:100%;">
 </tr>
 
 <tr>
-<td>Choose your favorite subjects:<br></td>
-<td><input type = checkbox name=fav_sub value=DCS4103>DCS4103
-<input type = checkbox name=fav_sub value=DCS3003>DCS3003<input type = checkbox name=fav_sub value=MST1003>MST1003
-<input type = checkbox name=fav_sub value=MSt2003>MST2003
+<td>Choose your favorite shoes:<br></td>
+<td><input type = checkbox name=fav_sub value=Women>Women
+<input type = checkbox name=fav_sub value=Men>Men
 </td>
 </tr>
 
@@ -45,31 +44,21 @@ width:60%;height:100%;">
 </tr>
 
 <tr>
-<td>Date of birth:</td>
-<td><input type=date name=dob></td>
-</tr>
-
-<tr>
-<td>Login Password:</td>
-<td><input type=password name=loginpass></td>
-</tr>
-
-<tr>
-<td>Course:</td>
+<td>Choose payment:</td>
 <td><select>
-<option value="0">-list of Courses -</option>
+<option value="0">-list of Payment -</option>
 
-<optgroup label="Diploma In Computer Science">
-<option value="DCS_S1">Semester 1</option>
-<option value="DCS_S2">Semester 2</option>
-<option value="DCS_S3">Semester 3</option>
-<option value="DCS_S4">Semester 4</option>
-<option value="DCS_S5">Semester 5</option>
-<option value="DCS_S6">Semester 6</option>
+<optgroup label="Online_bank">
+<option value="maybank">Maybank</option>
+<option value="hongleong">HongLeongbank</option>
+<option value="OCBC">OCBC</option>
+<option value="CIMB">CIMB</option>
+<option value="RHB">RHB</option>
+<option value="BSN">BSN</option>
 </optgroup>
 
-<option value="DIB">Diploma in Bussiness</option>
-<option value="DAS">Diploma in Airline Services</option>
+<b><option label="Cash of delivery"></option></b>
+<b><option label="QR pay"></option></b>
 </select></td>
 </tr>
 
