--- a/lesson_activity/Cus Details.html
+++ b/lesson_activity/Cus Details.html
@@ -2,6 +2,7 @@
 <head>
 <title>Bee Shoes</title>
 <link rel=icon href=ok.jpg type=image/jpg>
+<link rel="stylesheet" href="for cus details.css">
 <meta name=viewport content=width=device-width,initial-scale=1.0>
 
 </head>
@@ -69,5 +70,6 @@ width:60%;height:100%;">
 <input type=reset value=Reset></th>
 </tr>
 </table>
+  <button><a href="https://yyj2005.github.io/lesson_activity/Project.html" >Back to Home</a></button>
 </form>
 </center></body></html>
