--- a/lesson_activity/Women.html
+++ b/lesson_activity/Women.html
@@ -58,7 +58,11 @@
             <button onclick="showmessage()">Add to Cart</button>
         </div>
     </main>
+    <footer>
+        <h3>2023 My E-commerce Store Bee Shoes</h3>
+        <a href="https://yyj2005.github.io/lesson_activity/Project.html" >Back to Home</a>
+        <p><button onclick="window.print()">Print this page</button></p> 
+    </footer> 
 </head>
-<p align="center" size="7"><a href=https://yyj2005.github.io/lesson_activity/Project.html >Back to Home</a></p>
 </body>
 </html>
