--- a/lesson_activity/Product ecommerce.html
+++ b/lesson_activity/Product ecommerce.html
@@ -131,6 +131,10 @@
             <button onclick="showmessage()">Add to Cart</button>
         </div>
     </main>
+     <footer>
+        <h3>2023 My E-commerce Store Bee Shoes</h3>
+        <button onclick="window.print()">Print this page</button>
+    </footer> 
 </head>
 <br>
 <br>
