--- a/lesson_activity/Project.html
+++ b/lesson_activity/Project.html
@@ -6,6 +6,10 @@
     <link rel=icon href="logo ecomerce.jpg" type=image/jpg>
     <link rel="stylesheet" href="style ass.css">
     <title>Bee Shoes</title>
+    function showmessage(){
+        alert("Welcome to my website");
+        }
+        </script>
 </head>
 <body>
     <header>
@@ -13,6 +17,7 @@
         <br>
         <nav>
             <ul>
+                <li><button onclick="showmessage()">click me</button></li>
                 <li><a href=https://yyj2005.github.io/lesson_activity/Project.html>Home</a></li>
                 <li><a href=https://yyj2005.github.io/lesson_activity/Product%20ecommerce.html target="_self">Products</a></li>
                 <li><a href="mailto:yapyijin1020@gmail.com">Contact Us</a></li>
