--- a/lesson_activity/Project.html
+++ b/lesson_activity/Project.html
@@ -6,6 +6,7 @@
     <link rel=icon href="logo ecomerce.jpg" type=image/jpg>
     <link rel="stylesheet" href="style ass.css">
     <title>Bee Shoes</title>
+    <script>
     function showmessage(){
         alert("Welcome to my website");
         }
