--- a/lesson_activity/Project.html
+++ b/lesson_activity/Project.html
@@ -52,7 +52,7 @@
    
     <footer>
         <p>&copy; 2023 My E-commerce Store Bee Shoes</p> 
-         <p align="center" size="7"><a href=https://yyj2005.github.io/lesson_activity/Project.html >Back to Home</a></p>
+        <buuton><a href=https://yyj2005.github.io/lesson_activity/Project.html >Back to Home</a></buuton>
         <p><button onclick="window.print()">Print this page</button></p>
     </footer>
    
