--- a/lesson_activity/Cus Details.html
+++ b/lesson_activity/Cus Details.html
@@ -9,7 +9,7 @@
 <body topmargin=50 bgcolor="grey">
 <center>
 <form>
-<p style="background-color:rgb(40, 239, 235);
+<p style="background-image: url('logo\ ecomerce.jpg');
 font-family:verdena;
 font-size:160%;text-align:center;
 width:60%;height:100%;">
