--- a/lesson_activity/Cus Details.html
+++ b/lesson_activity/Cus Details.html
@@ -6,7 +6,7 @@
 <meta name=viewport content=width=device-width,initial-scale=1.0>
 
 </head>
-<body topmargin=50 bgcolor="grey">
+<body topmargin=50 bgcolor="black">
 <center>
 <form>
 <p style="background-image: url('logo\ ecomerce.jpg');
