--- a/lesson_activity/Product ecommerce.html
+++ b/lesson_activity/Product ecommerce.html
@@ -14,6 +14,7 @@
         <nav>
             <ul>
                 <li><a href=https://yyj2005.github.io/lesson_activity/Project.html>Home</a></li>
+                <li><a href=https://yyj2005.github.io/lesson_activity/Cus%20Details.html>Cus Detail</a></li>
                 <li><a href=https://yyj2005.github.io/lesson_activity/Women.html>Women</a></li>
                 <li><a href=https://yyj2005.github.io/lesson_activity/Men.html>Men</a></li>
             </ul>
